# Discord_Notekeeper_RAG

./: README.md  bot.py  main.py  pyproject.toml  raw_info_test.py  requirements.txt
data_fetch/: __init__.py  notion_interface.py  utils.py
llm_utils/: __init__.py  embeddings.py
