[project]
name = "local-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.7",
    "langchain-pinecone>=0.2.0",
    "langchain-text-splitters>=0.3.2",
    "langchain-chroma>=0.1.4",
    "langchain-community>=0.3.5",
    "langchain-ollama>=0.2.0",
    "pandas>=2.2.3",
]
